[tool.poetry]
name = "my-shared-infra"
version = "0.1.0"
description = "This repo will contain all my shared AWS infrastructure resources."
authors = ["thatsmidnight <10793854+thatsmidnight@users.noreply.github.com>"]
license = "Creative Commons Zero v1.0 Universal"
readme = "README.md"
packages = [{include = "my_shared_infra"}]

[tool.poetry.dependencies]
python = "^3.10"
aws-cdk-lib = "^2.90.0"


[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
pytest = "^7.4.0"
coverage = "^7.2.7"
pytest-cov = "^4.1.0"
pylint = "^2.17.5"
poethepoet = "^0.21.1"
python-dotenv = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
